src/objects/BillNPay__Scheduled_Payments__c.object
<CustomObject>
    <description>Setup one time future payments and recurring payment schedules.  A nightly job will create Payments based on the rules setup in this object</description>
    <fields>
        <fullName>BillNPay__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Authvia_Payment_Id__c</fullName>
        <description>If you add a custom lookup field to Payment such as an AccountingSeed Billing #, this custom field can be referenced in a formula</description>
        <inlineHelpText>The Payment ID (sometimes known as Order Number by some gateways) is used for reconciling payments in your gateway/processors reports (ex: Invoice or Order#) Enter a formula.  BillNPay__Account__r.BillNPay__authViaAccountId__c&amp;&quot;-&quot;&amp;Text(NOW())</inlineHelpText>
        <label>Authvia Payment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.BillNPay__Account__c</valueField>
            </filterItems>
            <infoMessage>Scheduled Payment Account and Contract Account are typically the same</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Debit_Day__c</fullName>
        <description>Field not used</description>
        <formula>IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Daily&apos;), &apos;1&apos;,IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Weekly&apos;), &apos;7&apos;,IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Monthly&apos;), &apos;30&apos;,IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Quarterly&apos;), &apos;120&apos;,IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Annual&apos;), &apos;365&apos;,IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Bi-Weekly&apos;), &apos;14&apos;,IF(ISPICKVAL(BillNPay__Payment_Frequency__c,&apos;Bi-Monthly&apos;), &apos;60&apos;,null)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weekly: Day of Week (1=Monday)
Monthly: If 29,30,31, pmt will be last day of month if month has a fewer days
Bi-Weekly: 1st pmt day. Next pmt 2 weeks later
Bi-Monthly: 1st pmt day. Next pmt 14 days later or EOM (Value must be &lt;18)</inlineHelpText>
        <label>Debit Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Description__c</fullName>
        <inlineHelpText>Copies to the Payment Description field</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Different_Initial_Amount__c</fullName>
        <inlineHelpText>If entered, a different amount will be charged for the first payment</inlineHelpText>
        <label>Different Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Due_Date__c</fullName>
        <inlineHelpText>Customize how this is set based on your business rules. Typically, Next Transaction Date + Due Days = Next Due Date, but you can add your own logic such as &quot;Next Business Day, End of Month, etc.  Use a Process Builder to populate.</inlineHelpText>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillNPay__Due_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Use formula in Scheduled Payments Process Builder to customize how Next Due Date is determined</description>
        <inlineHelpText>Number of days between date sent and date due.</inlineHelpText>
        <label>Due Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Last_of_the_month__c</fullName>
        <formula>IF( MONTH( TODAY() ) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last of the month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillNPay__Next_Transaction_Date__c</fullName>
        <label>Next Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillNPay__No_of_Payments_Made__c</fullName>
        <description>Rollup done by Chase Pay for Salesforce</description>
        <inlineHelpText>Rollup of Payments completed for this schedule.  Only approved/cleared payments that have not been reversed or charged back are considered</inlineHelpText>
        <label>No. of Payments Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__No_of_Payments_to_Make__c</fullName>
        <inlineHelpText>Instead of End Date, enter the number of recurring payments to schedule</inlineHelpText>
        <label>No. of Payments to Make</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Number_of_Retry_Attempts__c</fullName>
        <inlineHelpText>How many times should the system retry the payment after a failure.  Payment will be retried daily</inlineHelpText>
        <label>Number of Retry Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Payment_Frequency__c</fullName>
        <inlineHelpText>Bi-Weekly: Payments posted every other week starting from the first Next Payment Date (26/yr)
Bi-Monthly: Payment posted every other month starting from the first Next Payment Date (6/yr)
Semi-Monthly; Payment posted on 1st and 15th (24/yr)</inlineHelpText>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Payment_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Payment_Method_Description__c</fullName>
        <formula>IF(ISBLANK( BillNPay__Payment_Method__r.BillNPay__Nickname__c ),
BillNPay__Payment_Method__r.RecordType.Name   &amp;&quot; - &quot;&amp;  BillNPay__Payment_Method__r.BillNPay__Bank_Name__c,
BillNPay__Payment_Method__r.BillNPay__Nickname__c
)</formula>
        <label>Payment Method Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Payment_Method_Status__c</fullName>
        <formula>IF (  BillNPay__Payment_Method__r.BillNPay__Expired__c = TRUE,
  &quot;WARNING - PAYMENT METHOD EXPIRED!&quot;,
IF ( BillNPay__Payment_Method__r.BillNPay__Active__c = TRUE , 
  &quot;ACTIVE&quot;,
  &quot;WARNING - PAYMENT METHOD INACTIVE!&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Payment Method should belong to the same Contact or Account used in the Schedule.  Method must be Active</errorMessage>
            <filterItems>
                <field>BillNPay__Payment_Methods__c.BillNPay__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.BillNPay__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>BillNPay__Payment_Methods__c.BillNPay__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.BillNPay__Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>BillNPay__Payment_Methods__c.BillNPay__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Normally a Payment Method should belong to the same Account or Contact as used in the Schedule.  Methods must be Active</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BillNPay__Payment_Methods__c</referenceTo>
        <relationshipLabel>Scheduled Payments</relationshipLabel>
        <relationshipName>Scheduled_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__R01_Insufficient_Funds__c</fullName>
        <inlineHelpText>Select when a payment declined for R01 Insufficient Funds should be retried.</inlineHelpText>
        <label>R01 Insufficient Funds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Retry_Logic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__R09_Uncollected_Funds__c</fullName>
        <label>R09 Uncollected Funds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Retry_Logic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Recurring_End_Date__c</fullName>
        <label>Recurring End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillNPay__Recurring_Start_Date__c</fullName>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillNPay__Retry_Count__c</fullName>
        <inlineHelpText>The system counts how many retries have been attempted</inlineHelpText>
        <label>Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Retry_Logic__c</fullName>
        <inlineHelpText>If enabled, a failed payment will be retried</inlineHelpText>
        <label>Retry Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Retry_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Scheduled_Payment_Type__c</fullName>
        <inlineHelpText>Automatic process the payment without notifying consumer.  Semi-automatic sends a text or email requiring the user to approve the payment.</inlineHelpText>
        <label>Scheduled Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Semi Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Scheduled Payment</label>
    <listViews>
        <fullName>BillNPay__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BillNPay__Active__c</columns>
        <columns>BillNPay__Account__c</columns>
        <columns>BillNPay__Contact__c</columns>
        <columns>BillNPay__Payment_Frequency__c</columns>
        <columns>BillNPay__Scheduled_Payment_Type__c</columns>
        <columns>BillNPay__Payment_Method_Description__c</columns>
        <columns>BillNPay__Transaction_Amount__c</columns>
        <columns>BillNPay__Next_Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BillNPay__One_Time</fullName>
        <columns>NAME</columns>
        <columns>BillNPay__Account__c</columns>
        <columns>BillNPay__Payment_Frequency__c</columns>
        <columns>BillNPay__Payment_Method__c</columns>
        <columns>BillNPay__Transaction_Amount__c</columns>
        <columns>BillNPay__Next_Transaction_Date__c</columns>
        <columns>BillNPay__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BillNPay__Scheduled_Payments__c.BillNPay__One_Time</value>
        </filters>
        <label>One-Time</label>
    </listViews>
    <listViews>
        <fullName>BillNPay__Recurring</fullName>
        <columns>NAME</columns>
        <columns>BillNPay__Account__c</columns>
        <columns>BillNPay__Contact__c</columns>
        <columns>BillNPay__Payment_Frequency__c</columns>
        <columns>BillNPay__Scheduled_Payment_Type__c</columns>
        <columns>BillNPay__Payment_Method__c</columns>
        <columns>BillNPay__Transaction_Amount__c</columns>
        <columns>BillNPay__Different_Initial_Amount__c</columns>
        <columns>BillNPay__Recurring_Start_Date__c</columns>
        <columns>BillNPay__Next_Transaction_Date__c</columns>
        <columns>BillNPay__Active__c</columns>
        <columns>BillNPay__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BillNPay__Scheduled_Payments__c.BillNPay__Recurring</value>
        </filters>
        <label>Recurring</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Scheduled Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Payments</pluralLabel>
    <recordTypes>
        <fullName>BillNPay__One_Time</fullName>
        <active>true</active>
        <description>Payment will be generated once and then this record will become inactive</description>
        <label>One-Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>BillNPay__Recurring</fullName>
        <active>true</active>
        <description>Payment will be generated more than once</description>
        <label>Recurring</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillNPay__Schedule_with_dates_or_count</fullName>
        <active>true</active>
        <description>Recurring schedule payments can be sunsetted with End Date or Count, but not both</description>
        <errorConditionFormula>not(isnull( BillNPay__No_of_Payments_to_Make__c))&amp;&amp;
not(isnull( BillNPay__Recurring_End_Date__c))</errorConditionFormula>
        <errorMessage>Use either End Date or No. of Payments to Make to control when schedule should end, but not both</errorMessage>
    </validationRules>
</CustomObject>